[gd_scene load_steps=3 format=2]

[ext_resource path="res://Maze/MazeGenerator.gd" type="Script" id=1]
[ext_resource path="res://Maze/Main.gd" type="Script" id=2]

[node name="Main" type="Node"]
script = ExtResource( 2 )

[node name="MazeGenerator" type="Node" parent="."]
script = ExtResource( 1 )

[node name="Maze" type="Node" parent="."]

[connection signal="mazeGenComplete" from="MazeGenerator" to="." method="_on_MazeGenerator_mazeGenComplete"]
